fix send tweet button on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
 }
 
 ::selection {
-  background-color: #ea4071;
+  background-color: #FF2670;
   color: white; /* This sets the text color when selected. Adjust as needed. */
 }
 
